argocd/base/mixarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mixarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: mixarr
  ports:
    - port: 3000
      targetPort: 3000
