argocd/base/mixarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mixarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mixarr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: mixarr
          port: 3000
  tls: {}
